--- a/app/ui/angular.json
+++ b/app/ui/angular.json
@@ -55,12 +55,6 @@
               "outputHashing": "all"
             },
             "development": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.local.ts"
-                }
-              ],
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
@@ -73,10 +67,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "app-ui:build:production"
+              "buildTarget": "app-ui:build:production"
             },
             "development": {
-              "browserTarget": "app-ui:build:development"
+              "buildTarget": "app-ui:build:development"
             }
           },
           "defaultConfiguration": "development"
