--- a/app/ui/angular.json
+++ b/app/ui/angular.json
@@ -27,7 +27,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles/style.scss"
             ],
             "scripts": [],
             "browser": "src/main.ts"
