--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "^18.2.11",
     "@angular/compiler": "^18.2.11",
     "@angular/core": "^18.2.11",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.2.11",
     "@angular/material": "^18.2.11",
     "@angular/platform-browser": "^18.2.11",
