--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -25,8 +25,12 @@
     "@angular/platform-browser": "^18.2.11",
     "@angular/platform-browser-dynamic": "^18.2.11",
     "@angular/router": "^18.2.11",
+    "@material/card": "^14.0.0",
+    "@material/density": "^14.0.0",
     "angular-material": "^1.2.5",
+    "bootstrap": "^5.3.3",
     "class-transformer": "^0.5.1",
+    "materialize-css": "^1.0.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
