--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -14,7 +14,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.11",
+    "@angular/animations": "^18.2.13",
     "@angular/cdk": "^18.2.11",
     "@angular/common": "^18.2.11",
     "@angular/compiler": "^18.2.11",
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "materialize-css": "^1.0.0",
     "moment": "^2.30.1",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.14.10"
