feat: - Pipeline CD / CI dockerfile

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,23 @@
-FROM openjdk:18
-ARG PATH_FILE
+FROM openjdk:21
+LABEL maintainer=BrazonaTech
 VOLUME /tmp
 
-ARG ARG_PATH_FILE_API=api
-ARG ARG_PATH_FILE_UI=ui
+ARG ARG_SPRING_ACTIVE_PROFILE=local
+ARG ARG_CONFIG_SERVER_HOST=localhost:8888
+ARG ARG_CONFIG_SERVER_USER=admin
+ARG ARG_CONFIG_SERVER_PASS=admin
+ARG ARG_APP_API_URL=http://localhost:8080
+ARG ARG_BASIC_USER=user
+ARG ARG_BASIC_PASS=user
 
-ENV PATH_FILE_API $ARG_PATH_FILE_API
-ENV PATH_FILE_UI $ARG_PATH_FILE_UI
+ENV SPRING_ACTIVE_PROFILE=$ARG_SPRING_ACTIVE_PROFILE
+ENV CONFIG_SERVER_HOST=$ARG_CONFIG_SERVER_HOST
+ENV CONFIG_SERVER_USER=$ARG_CONFIG_SERVER_USER
+ENV CONFIG_SERVER_PASS=$ARG_CONFIG_SERVER_PASS
+ENV APP_API_URL=$ARG_APP_API_URL
+ENV BASIC_USER=$ARG_BASIC_USER
+ENV BASIC_PASS=$ARG_BASIC_PASS
 
-COPY $PATH_FILE_API/target/*.jar app.jar
-COPY $PATH_FILE_UI/target/*.jar app.jar
+COPY ./api/target/*.jar app.jar
 
 ENTRYPOINT ["java","-jar","/app.jar"]
