--- a/app/pom.xml
+++ b/app/pom.xml
@@ -42,6 +42,6 @@
 	</properties>
     <modules>
 		<module>api</module>
-		<!-- <module>ui</module> -->
+		<module>ui</module>
 	</modules>
 </project>
