--- a/.github/workflows/pipeline-build.yml
+++ b/.github/workflows/pipeline-build.yml
@@ -1,12 +1,14 @@
-name: WebSite Pipeline Build
+name: Pipeline Build
 on:
-  push:
+  pull_request:
     paths:
-      - 'website/**'
+      - 'app/**'
+      - '.github/workflows/**'
     branches:
       - 'main'
-      - 'releases/**'
       - 'develop'
+      - 'hotfix/**'
+      - 'release/**'
   workflow_dispatch:
 env:
   BRANCH_TARGET: ${{ github.ref_name }}
@@ -16,28 +18,49 @@ env:
   REGISTRY_DOCKER: ghcr.io
   REPOSITORY_DOCKER: ${{ github.repository }}
   VERSION_TYPE: ''
-  APP: website
+  APP: idp
   
 jobs:
   info-environment:
     name: Identifying the Environment
     permissions: write-all
-    uses: ./.github/workflows/export-env.yml
+    uses: ./.github/workflows/identifier.yml
     with:
       github_base_ref: ${{github.base_ref}}
       github_event_name: ${{github.event_name }}
       github_ref_name: ${{github.ref_name}}
+      pr_merged: ${{github.event.pull_request.merged}}
   generate-tag:
     name: Generate Tag Image Docker
     permissions: write-all
     needs: [info-environment]
-    uses: ./.github/workflows/tag-image.yml
+    uses: ./.github/workflows/tag.yml
     with:
       environment_name: ${{needs.info-environment.outputs.environment_name}}
-      path_pom: ./website/pom.xml
+      path_pom: ./app/pom.xml
+  java:
+    name: Maven Build
+    needs: [info-environment]
+    permissions: write-all
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{needs.info-environment.outputs.environment_name}}
+    steps:
+    - name: Checkout the source code
+      uses: actions/checkout@v3
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'adopt'
+        java-version: '21'
+        cache: maven
+
+    - name: Build with Maven
+      run: mvn -B package --file app/pom.xml
   build:
     name: Build and Push Docker image 
-    needs: [info-environment, generate-tag ]
+    needs: [info-environment, generate-tag, java]
     runs-on: ubuntu-latest
     permissions: write-all
     environment:
@@ -53,13 +76,14 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
-          java-version: '11'
+          java-version: '21'
       - name: Build with Maven
-        run: mvn -f ./website/ clean install -P build
+        #run: mvn -f ./app/ clean install 
+        run: mvn -f ./app/ clean install -P ${{needs.info-environment.outputs.maven_profile}}
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
@@ -72,20 +96,19 @@ jobs:
         env:
           TAG_IMAGE: ${{needs.generate-tag.outputs.tag}}
         with:
-          context: ./website/
+          context: ./app
           push: true
           tags: ${{ env.REGISTRY_DOCKER }}/${{ github.repository }}/${{ env.APP }}:${{env.TAG_IMAGE}}
   deploy:
     name: Pipeline Deploy
     needs: [info-environment, generate-tag, build]
     permissions: write-all
-    uses: ./.github/workflows/pipeline-deploy.yml
+    uses: ./.github/workflows/deploy.yml
     secrets:
-      KUBECONFIG: ${{ secrets.KUBE_CONFIG }}
+      KUBECONFIG: ${{ secrets.KUBECONFIG }}
     with:
       environment_name: ${{needs.info-environment.outputs.environment_name}}
       name_env: ${{needs.info-environment.outputs.github_env_file_field}}
-      path_app: website
-      docker_image_tag: ${{needs.generate-tag.outputs.tag}}     
-
+      path_app: app
+      docker_image_tag: ${{needs.generate-tag.outputs.tag}}
 
