--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -8,7 +8,7 @@
     "build": "npm run file_env && ng build --configuration production --output-path ../api/target/idp/app",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "clean": "rm -rf ./node_modules package-lock.json .cache dist .angular",
+    "clean": "rm -rf ./node_modules package-lock.json .cache dist .angular ./node ./target",
     "reinstall": "npm run clean && npm cache clean --force && npm install --force",
     "file_env": "cp ./src/assets/env.template.js ./src/assets/env.js"
   },
@@ -55,5 +55,15 @@
   },
   "browser": {
     "crypto": false
+  },
+  "os": [
+    "win32",
+    "linux"
+  ],
+  "optionalDependencies": {
+    "@lmdb/lmdb-linux-x64": "^3.0.13",
+    "@lmdb/lmdb-win32-x64": "^3.0.13",
+    "@rollup/rollup-win32-x64-msvc": "4.22.4",
+    "@rollup/rollup-linux-x64-gnu": "4.22.4"
   }
 }
