--- a/app/ui/pom.xml
+++ b/app/ui/pom.xml
@@ -30,10 +30,11 @@
 					<plugin>
 						<groupId>com.github.eirslett</groupId>
 						<artifactId>frontend-maven-plugin</artifactId>
-						<version>1.7.6</version>
+						<version>${frontend-maven-plugin.version}</version>
 						<configuration>
 							<workingDirectory>./</workingDirectory>
-							<nodeVersion>v20.3.0</nodeVersion>
+							<npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion>
+          					<nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
 						</configuration>
 						<executions>
 							<execution>
@@ -47,6 +48,9 @@
 								<goals>
 									<goal>npm</goal>
 								</goals>
+								<configuration>
+									<arguments>install</arguments>
+								</configuration>
 							</execution>
 							<execution>
 								<id>npm run build</id>
