--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.0'
 
 services:
-  app:
-    container_name: ${CONTAINER_NAME}
+  api:
+    container_name: ${CONTAINER_NAME_API}
     build:
-      context: .
+      context: ./api
     networks:
       - bza-network
     restart: always  
@@ -13,14 +13,21 @@ services:
     - CONFIG_SERVER_HOST=${CONFIG_SERVER_HOST}
     - CONFIG_SERVER_USER=${CONFIG_SERVER_USER}
     - CONFIG_SERVER_PASS=${CONFIG_SERVER_PASS}
+    ports:
+      - "${API_PORT_EXTERNAL}:${API_PORT_INTERNAL}"
+  ui:
+    container_name: ${CONTAINER_NAME_UI}
+    build:
+      context: ./ui
+    networks:
+      - bza-network
+    restart: always  
+    environment:
     - APP_API_URL=${APP_API_URL}
     - BASIC_USER=${BASIC_USER}
     - BASIC_PASS=${BASIC_PASS}
     ports:
       - "${UI_PORT_EXTERNAL}:${UI_PORT_INTERNAL}"
-      - "${API_PORT_EXTERNAL}:${API_PORT_INTERNAL}"
-      
-
 networks:
   bza-network:
     external: true
