--- a/app/ui/pom.xml
+++ b/app/ui/pom.xml
@@ -67,6 +67,55 @@
 			</build>
 		</profile>
 		<profile>
+			<id>tst</id>
+			<build>
+				<resources>
+					<resource>
+						<directory>./dist/frakton</directory>
+						<targetPath>static</targetPath>
+					</resource>
+				</resources>
+				<plugins>
+					<plugin>
+						<groupId>com.github.eirslett</groupId>
+						<artifactId>frontend-maven-plugin</artifactId>
+						<version>${frontend-maven-plugin.version}</version>
+						<configuration>
+							<workingDirectory>./</workingDirectory>
+							<npmVersion>${frontend-maven-plugin.npmVersion}</npmVersion>
+          					<nodeVersion>${frontend-maven-plugin.nodeVersion}</nodeVersion>
+						</configuration>
+						<executions>
+							<execution>
+								<id>install node and npm</id>
+								<goals>
+									<goal>install-node-and-npm</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>npm install</id>
+								<goals>
+									<goal>npm</goal>
+								</goals>
+								<configuration>
+									<arguments>install</arguments>
+								</configuration>
+							</execution>
+							<execution>
+								<id>npm run build</id>
+								<goals>
+									<goal>npm</goal>
+								</goals>
+								<configuration>
+									<arguments>run build</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>dockercompose</id>
 			<build>
 				<resources>
