--- a/app/api/Dockerfile
+++ b/app/api/Dockerfile
@@ -11,11 +11,13 @@ ARG ARG_SPRING_ACTIVE_PROFILE=local
 ARG ARG_CONFIG_SERVER_HOST=localhost:8888
 ARG ARG_CONFIG_SERVER_USER=admin
 ARG ARG_CONFIG_SERVER_PASS=admin
+ARG ARG_DB_SERVER_HOST=admin
 
 ENV SPRING_ACTIVE_PROFILE=$ARG_SPRING_ACTIVE_PROFILE
 ENV CONFIG_SERVER_HOST=$ARG_CONFIG_SERVER_HOST
 ENV CONFIG_SERVER_USER=$ARG_CONFIG_SERVER_USER
 ENV CONFIG_SERVER_PASS=$ARG_CONFIG_SERVER_PASS
+ENV DB_SERVER_HOST=$ARG_DB_SERVER_HOST
 
 COPY ./target/*.jar app.jar
 
