--- a/app/ui/angular.json
+++ b/app/ui/angular.json
@@ -62,6 +62,27 @@
               ],
               "outputHashing": "all"
             },
+            "test_docker": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.tst.ts"
+                }
+              ],
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
@@ -76,6 +97,9 @@
           "configurations": {
             "production": {
               "buildTarget": "app-ui:build:production"
+            },
+            "test_docker": {
+              "buildTarget": "app-ui:build:development"
             },
             "development": {
               "buildTarget": "app-ui:build:development"
