--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve -o",
     "dev": "npm run env && ng build --watch --configuration development ",
-    "tst": "npm run env && ng build --watch --configuration test_docker ",
+    "tst": "ng build --watch --configuration test_docker ",
     "build": "npm run file_env && ng build --configuration production ",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
