feat: inclusão do origin cors na variavel de ambiente

--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     - CONFIG_SERVER_USER=${CONFIG_SERVER_USER}
     - CONFIG_SERVER_PASS=${CONFIG_SERVER_PASS}
     - DB_SERVER_HOST=${DB_SERVER_HOST}
+    - IDP_CORS_ORIGIN=${IDP_CORS_ORIGIN}
     ports:
       - "${API_PORT_EXTERNAL}:${API_PORT_INTERNAL}"
   ui:
