--- a/.github/workflows/pipeline-build.yml
+++ b/.github/workflows/pipeline-build.yml
@@ -59,7 +59,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn -B package --file app/pom.xml
+      run: mvn -f ./app/ clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true
   build:
     name: Build and Push Docker image 
     needs: [info-environment, generate-tag, java]
