--- a/.github/workflows/pipeline-build.yml
+++ b/.github/workflows/pipeline-build.yml
@@ -19,8 +19,8 @@ env:
   REPOSITORY_DOCKER: ${{ github.repository }}
   VERSION_TYPE: ''
   APP: idp
-  APP_API: idp/api
-  APP_UI: idp/ui
+  DOCKER_NAME_API: api
+  DOCKER_NAME_UI: ui
   
 jobs:
   info-environment:
@@ -40,29 +40,10 @@ jobs:
     with:
       environment_name: ${{needs.info-environment.outputs.environment_name}}
       path_pom: ./app/pom.xml
-  java:
-    name: Maven Build
-    needs: [info-environment]
-    permissions: write-all
-    runs-on: ubuntu-latest
-    environment:
-      name: ${{needs.info-environment.outputs.environment_name}}
-    steps:
-    - name: Checkout the source code
-      uses: actions/checkout@v3
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'adopt'
-        java-version: '21'
-        cache: maven
-
-    - name: Build with Maven
-      run: mvn -f ./app/ clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true
   build:
-    name: Build and Push Docker image 
-    needs: [info-environment, generate-tag, java]
+    name: Build Maven and Build/Push Image Docker
+    needs: [info-environment, generate-tag]
     runs-on: ubuntu-latest
     permissions: write-all
     environment:
@@ -70,21 +51,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Checkout
-        uses: actions/checkout@v3
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
           java-version: '21'
+
       - name: Build with Maven
         run: mvn -f ./app/ clean install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true
+
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
@@ -99,7 +82,7 @@ jobs:
         with:
           context: ./app/api
           push: true
-          tags: ${{ env.REGISTRY_DOCKER }}/${{ github.repository }}/${{ env.APP_API }}:${{env.TAG_IMAGE}}
+          tags: ${{ env.REGISTRY_DOCKER }}/${{ github.repository }}/${{ env.DOCKER_NAME_API }}:${{env.TAG_IMAGE}}
 
       - name: Build Docker Image UI
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -108,7 +91,7 @@ jobs:
         with:
           context: ./app/ui
           push: true
-          tags: ${{ env.REGISTRY_DOCKER }}/${{ github.repository }}/${{ env.APP_UI }}:${{env.TAG_IMAGE}}    
+          tags: ${{ env.REGISTRY_DOCKER }}/${{ github.repository }}/${{ env.DOCKER_NAME_UI }}:${{env.TAG_IMAGE}}    
   # deploy:
   #   name: Pipeline Deploy
   #   needs: [info-environment, generate-tag, build]
