test: Pipeline Deploy

--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -54,7 +54,7 @@ jobs:
       id: values_file_env
       run: echo "values_file_env=${{ env.VALUES }}" >> $GITHUB_OUTPUT
   deploy:
-    name: Deploy K8S
+    name: Publish Manifest K8S
     runs-on: ubuntu-latest
     permissions: write-all
     needs: [envfile]
@@ -69,7 +69,7 @@ jobs:
     - name: Preparete Manisfest k8s
       run: |
         echo ${{ needs.envfile.outputs.var_values }} >> "template.txt"
-        bash .github/workflows/scripts/prepare-manifest.sh template.txt ${{env.MANIFEST_IN}} ${{env.MANIFEST_OUT}} ${{inputs.docker_image_tag}}
+        bash .github/workflows/scripts/manifest.sh template.txt ${{env.MANIFEST_IN}} ${{env.MANIFEST_OUT}} ${{inputs.docker_image_tag}}
     - name: Set Kubernetes Context
       uses: azure/k8s-set-context@v1
       with:
