--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -1,4 +1,4 @@
-name: Apply Manifest K8S
+name: IDP Pipeline Deploy
 on:
   workflow_call:
     secrets:
@@ -25,6 +25,8 @@ env:
   MANIFEST_IN: ${{ inputs.path_app }}/deployment.yml
   MANIFEST_OUT: ${{ inputs.path_app }}/deployment-run.yml
   ENV_TXT: ${{ inputs.path_app }}/env.txt
+  TEMPLATE_TXT: ${{ inputs.path_app }}/template.txt
+  DOCKER_IMAGE_TAG: ${{ inputs.docker_image_tag }}
 jobs:
   envfile:
     name: Env File
@@ -68,8 +70,8 @@ jobs:
     
     - name: Preparete Manisfest k8s
       run: |
-        echo ${{ needs.envfile.outputs.var_values }} >> "template.txt"
-        bash .github/workflows/scripts/manifest.sh template.txt ${{env.MANIFEST_IN}} ${{env.MANIFEST_OUT}} ${{inputs.docker_image_tag}}
+        echo ${{ needs.envfile.outputs.var_values }} >> "${{env.TEMPLATE_TXT}}" 
+        bash .github/workflows/scripts/manifest.sh ${{env.TEMPLATE_TXT}} ${{env.MANIFEST_IN}} ${{env.MANIFEST_OUT}} ${{env.DOCKER_IMAGE_TAG}}
     - name: Set Kubernetes Context
       uses: azure/k8s-set-context@v1
       with:
