--- a/app/ui/Dockerfile
+++ b/app/ui/Dockerfile
@@ -6,14 +6,15 @@ LABEL maintainer=BrazonaTech
 LABEL stage="frontend"
 LABEL author="BrazonaTech"
 
-ARG ARG_APP_API_URL=http://localhost:8080
 ARG ARG_APP_API_BASIC_USER=user
 ARG ARG_APP_API_BASIC_PASS=user
+ARG ARG_APP_API_HOST=user
+ARG ARG_APP_API_PORT=user
 
-ENV APP_API_URL=$ARG_APP_API_URL
 ENV APP_API_BASIC_USER=$ARG_APP_API_BASIC_USER
 ENV APP_API_BASIC_PASS=$ARG_APP_API_BASIC_PASS
-
+ENV APP_API_HOST=$ARG_APP_API_HOST
+ENV APP_API_PORT=$ARG_APP_API_PORT
 
 COPY ./nginx.conf  /etc/nginx/conf.d/default.conf
 COPY ./dist/app-ui/browser /usr/share/nginx/html
