--- a/app/api/deployment.yml
+++ b/app/api/deployment.yml
@@ -29,7 +29,7 @@ spec:
         - name: dockerconfigjson-github-com
       containers:
       - name: idp-api-service
-        image: ${IMAGE}
+        image: ${IMAGE_API}
         imagePullPolicy: Always
         ports:
         - containerPort: 7782
@@ -102,7 +102,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: ${DNS}
+  - host: ${DNS_API}
     http:
       paths:
         - pathType: Prefix
