test: deploy idp

--- a/.github/workflows/identifier.yml
+++ b/.github/workflows/identifier.yml
@@ -34,7 +34,7 @@ jobs:
       BRANCH_NAME_REF: ${{inputs.github_base_ref}}
       EVENT_TYPE: ${{inputs.github_event_name}}
       ENV_NAME: ""
-      GITHUB_ENV_FILE_FIELD: ${{inputs.app_name}}_DEVELOPMENT_ENV
+      GITHUB_ENV_FILE_FIELD: "DEVELOPMENT_ENV"
       APP_NAME: ${{inputs.app_name}}_
     outputs:
       environment_name: ${{ steps.name.outputs.environment_name }}
@@ -67,3 +67,4 @@ jobs:
       - name: Defined Name File Environment
         id: name_file_env
         run: echo "name_file_env=${{env.APP_NAME}}${{ env.GITHUB_ENV_FILE_FIELD }}" >> $GITHUB_OUTPUT
+        # run: echo "name_file_env=${{ env.GITHUB_ENV_FILE_FIELD }}" >> $GITHUB_OUTPUT
