--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -79,6 +79,7 @@ jobs:
         kubeconfig: ${{ secrets.KUBECONFIG }}
     - name: Deploy to Cluster
       run: | 
+        cat ${{env.MANIFEST_OUT}}
         kubectl apply -f ${{env.MANIFEST_OUT}}
     - name: Successful
       id: status
