--- a/app/ui/deployment.yml
+++ b/app/ui/deployment.yml
@@ -29,54 +29,29 @@ spec:
         - name: dockerconfigjson-github-com
       containers:
       - name: idp-ui-service
-        image: ${IMAGE_UI}
+        image: ${IMAGE}
         imagePullPolicy: Always
         ports:
-        - containerPort: 7782
+        - containerPort: 80
           protocol: TCP
         env:
-          - name: SPRING_ACTIVE_PROFILE
+          - name: APP_API_HOST
             valueFrom:
               configMapKeyRef:
-                name: idp-ui-service           
-                key: SPRING_ACTIVE_PROFILE
+                name: idp         
+                key: APP_API_HOST
           
-          - name: GITHUB_TOKEN
+          - name: APP_API_PORT
             valueFrom:
               configMapKeyRef:
-                name: idp-ui-service           
-                key: GITHUB_TOKEN  
+                name: idp         
+                key: APP_API_PORT  
 
-          - name: GITHUB_USER
+          - name: APP_API_BASIC_USER
             valueFrom:
               configMapKeyRef:
-                name: idp-ui-service           
-                key: GITHUB_USER   
-
-          - name: CONFIG_SERVER_PASS
-            valueFrom:
-              configMapKeyRef:
-                name: idp-ui-service           
-                key: CONFIG_SERVER_PASS
-
-          - name: CONFIG_SERVER_ENCRYPT_KEY
-            valueFrom:
-              configMapKeyRef:
-                name: idp-ui-service           
-                key: CONFIG_SERVER_ENCRYPT_KEY
-
-          - name: GITHUB_BRANCH
-            valueFrom:
-              configMapKeyRef:
-                name: idp-ui-service           
-                key: GITHUB_BRANCH
-
-          - name: GITHUB_URL
-            valueFrom:
-              configMapKeyRef:
-                name: idp-ui-service           
-                key: GITHUB_URL     
-
+                name: idp         
+                key: APP_API_BASIC_USER   
 ---
 kind: Service
 apiVersion: v1
@@ -89,8 +64,8 @@ spec:
   type: ClusterIP
   ports:
     - protocol: TCP
-      port: 7782
-      targetPort: 7782
+      port: 80
+      targetPort: 80
 
 ---
 
@@ -102,7 +77,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: ${DNS_UI}
+  - host: ${DNS}
     http:
       paths:
         - pathType: Prefix
@@ -111,4 +86,4 @@ spec:
             service:
               name: idp-ui-service
               port:
-                number: 7782
+                number: 80
