test: run deploy idp

--- a/app/api/Dockerfile
+++ b/app/api/Dockerfile
@@ -13,6 +13,7 @@ ARG ARG_CONFIG_SERVER_USER=admin
 ARG ARG_CONFIG_SERVER_PASS=admin
 ARG ARG_DB_SERVER_HOST=admin
 ARG ARG_IDP_CORS_ORIGIN=admin
+ARG ARG_API_PORT_INTERNAL=7782
 
 ENV SPRING_ACTIVE_PROFILE=$ARG_SPRING_ACTIVE_PROFILE
 ENV CONFIG_SERVER_HOST=$ARG_CONFIG_SERVER_HOST
@@ -20,6 +21,7 @@ ENV CONFIG_SERVER_USER=$ARG_CONFIG_SERVER_USER
 ENV CONFIG_SERVER_PASS=$ARG_CONFIG_SERVER_PASS
 ENV DB_SERVER_HOST=$ARG_DB_SERVER_HOST
 ENV IDP_CORS_ORIGIN=$ARG_IDP_CORS_ORIGIN
+ENV API_PORT_INTERNAL=$ARG_API_PORT_INTERNAL
 
 COPY ./target/*.jar app.jar
 
